# onward

./: CMakeLists.txt  CMakePresets.json  DESIGN_DOCUMENT.md  MAIN_STORY.md  RTS_design_doc.md  RTS_economy_design.md  RTS_match_termination_spec.md  RTS_resource_ownership_spec.md  RTS_technical_requirements.md  design_review.md
src/: main.cpp
src/hexgrid/: hex.h  tile.cpp  tile.h
tests/: hexgrid_hex_tests.cpp
